RESOLVED FIXED59585
Webkit-gtk build failure, no type/member 'Page' in namespace 'WebCore'
https://bugs.webkit.org/show_bug.cgi?id=59585
Summary Webkit-gtk build failure, no type/member 'Page' in namespace 'WebCore'
ojab
Reported 2011-04-27 00:33:37 PDT
Webkit trunk r85024 build fails with both clang & gcc-4.6.0, the error is: make[1]: Entering directory `/mnt/mnt/backup/sources/webkit' CXX Source/WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-TextCheckerClientEnchant.lo In file included from Source/WebKit/gtk/WebCoreSupport/TextCheckerClientEnchant.cpp:29: ./Source/WebKit/gtk/webkit/webkitwebviewprivate.h:34:10: error: no type named 'Page' in namespace 'WebCore' WebCore::Page* core(WebKitWebView*); ~~~~~~~~~^ ./Source/WebKit/gtk/webkit/webkitwebviewprivate.h:35:29: error: no member named 'Page' in namespace 'WebCore' WebKitWebView* kit(WebCore::Page*); ~~~~~~~~~^ ./Source/WebKit/gtk/webkit/webkitwebviewprivate.h:35:34: error: expected expression WebKitWebView* kit(WebCore::Page*); ^ ./Source/WebKit/gtk/webkit/webkitwebviewprivate.h:54:14: error: no type named 'Page' in namespace 'WebCore' WebCore::Page* corePage; ~~~~~~~~~^ 4 errors generated. make[1]: *** [Source/WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-TextCheckerClientEnchant.lo] Error 1 make[1]: Leaving directory `/mnt/mnt/backup/sources/webkit' make: *** [all] Error 2
Attachments
#include "Page.h" fixes the issue. (442 bytes, patch)
2011-04-27 00:50 PDT, ojab
mrobinson: review-
'#include "Page.h" ' in webkitwebviewprivate.h (1013 bytes, patch)
2011-04-28 03:15 PDT, ojab
no flags
ojab
Comment 1 2011-04-27 00:50:20 PDT
Created attachment 91250 [details] #include "Page.h" fixes the issue.
Martin Robinson
Comment 2 2011-04-27 13:39:37 PDT
Comment on attachment 91250 [details] #include "Page.h" fixes the issue. Would you be willing to include and fill out a ChangeLog with this patch. Please see the instructions at: http://www.webkit.org/coding/contributing.html
ojab
Comment 3 2011-04-28 03:15:38 PDT
Created attachment 91458 [details] '#include "Page.h" ' in webkitwebviewprivate.h This time with Changelog & created with svn-create-patch.
Martin Robinson
Comment 4 2011-04-28 08:49:04 PDT
Comment on attachment 91458 [details] '#include "Page.h" ' in webkitwebviewprivate.h View in context: https://bugs.webkit.org/attachment.cgi?id=91458&action=review > Source/WebKit/gtk/webkit/webkitwebviewprivate.h:29 > #include "GOwnPtr.h" The style guidelines say this must be in alphabetical order. Sorry I didn't mention it before. I'll land this and fix it.
Martin Robinson
Comment 5 2011-04-28 12:10:33 PDT
Note You need to log in before you can comment on or make changes to this bug.