2011-04-28  ojab  <ojab@ojab.ru>

Reviewed by Martin Robinson.

        Webkit-gtk build failure, no type/member 'Page' in namespace 'WebCore'
        https://bugs.webkit.org/show_bug.cgi?id=59585

        * webkit/webkitwebviewprivate.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@85221 bbb929c8-8fbe-4397-9dbb-9b2b20218538