third_party/WebKit/Source/WebKit/gtk/webkit/webkitwebviewprivate.h
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FullscreenVideoController.h"
 #include "GtkClickCounter.h"
 #include "GOwnPtr.h"
+#include "Page.h"
 #include "ResourceHandle.h"
 #include <webkit/webkitwebview.h>
 
